--- a/labs/lab_1.ipynb
+++ b/labs/lab_1.ipynb
@@ -649,7 +649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sf-quant-labs",
    "language": "python",
    "name": "python3"
   },
