Push incomplete lab 4 edits, through task_backtest

--- a/labs/lab_3.ipynb
+++ b/labs/lab_3.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1e51eeb5",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
    "source": [
     "def task_compute_momentum(data: pl.DataFrame) -> pl.DataFrame:\n",
     "    \"\"\"\n",
-    "    Compute the t_12 to t_2 momentum signal for each secrutiy and date combination.\n",
+    "    Compute the t_12 to t_2 momentum signal for each security and date combination.\n",
     "    \n",
     "    Args:\n",
     "        data (pl.DataFrame): Data frame containing date, barrid, price, and return columns.\n",
